Color contrast issue fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -409,7 +409,7 @@ button:hover {
 .cta-button {
     display: inline-block;
     padding: 5px 20px;
-    color:#064586;
+    color:black;
     background-color:#BBBE64;
     text-decoration: none;
     font-weight: bold;
